--- a/DOM/deligate.html
+++ b/DOM/deligate.html
@@ -19,6 +19,9 @@
         </ul>
         <button id="btn-new-item">Add Item</button>
     </div>
+    <script>
+        document.getElementById("li-container").classList.remove("container")
+    </script>
 
     <script src="./deligate.js"></script>
 </body>
